// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Always Show All 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--always-show-all"
    id=":label6"
  >
    Viser alle options også når valgt
  </label>
  <div>
    <input
      list="«r5»"
      placeholder
      id="components-suggestion--always-show-all"
      type="text"
      value="Sogndal"
      popovertarget="«r5»"
      aria-autocomplete="list"
      aria-controls="«r5»"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r5»"
      role="listbox"
      tabindex="-1"
      aria-labelledby=":label6"
    >
      <u-option
        data-empty
        role="none"
        tabindex="-1"
        aria-disabled="false"
        aria-selected="false"
        value="Tomt                                                                                                    Sogndal"
      >
        Tomt
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
        value="Sogndal                                                                                                    Sogndal"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Oslo                                                                                                    Sogndal"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Brønnøysund                                                                                                    Sogndal"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Stavanger                                                                                                    Sogndal"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Trondheim                                                                                                    Sogndal"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Bergen                                                                                                    Sogndal"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Lillestrøm                                                                                                    Sogndal"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </div>
</div>
`;

exports[`Controlled 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--controlled"
    id=":label2"
  >
    Velg en destinasjon
  </label>
  <div>
    <input
      list="«r1»"
      placeholder
      id="components-suggestion--controlled"
      type="text"
      value
      popovertarget="«r1»"
      aria-autocomplete="list"
      aria-controls="«r1»"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r1»"
      role="listbox"
      tabindex="-1"
      aria-labelledby=":label2"
    >
      <u-option
        data-empty
        role="none"
        tabindex="-1"
        aria-disabled="false"
        aria-selected="false"
      >
        Tomt
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </div>
</div>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Du har skrevet inn:
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett verdi til Sogndal
</button>
`;

exports[`Custom Filter Alt 1 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--custom-filter-alt-1"
    id=":label4"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <div>
    <input
      list="«r3»"
      placeholder
      id="components-suggestion--custom-filter-alt-1"
      type="text"
      popovertarget="«r3»"
      aria-autocomplete="list"
      aria-controls="«r3»"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r3»"
      role="listbox"
      tabindex="-1"
      aria-labelledby=":label4"
    >
      <u-option
        data-empty
        role="none"
        tabindex="-1"
        aria-disabled="false"
        aria-selected="false"
        value="Tomt                                                                                                    "
      >
        Tomt
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Sogndal                                                                                                    "
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Oslo                                                                                                    "
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Brønnøysund                                                                                                    "
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Stavanger                                                                                                    "
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Trondheim                                                                                                    "
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Bergen                                                                                                    "
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Lillestrøm                                                                                                    "
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </div>
</div>
`;

exports[`Custom Filter Alt 2 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--custom-filter-alt-2"
    id=":label5"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <div>
    <input
      list="«r4»"
      placeholder
      id="components-suggestion--custom-filter-alt-2"
      type="text"
      value
      popovertarget="«r4»"
      aria-autocomplete="list"
      aria-controls="«r4»"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r4»"
      role="listbox"
      tabindex="-1"
      aria-labelledby=":label5"
    >
      <u-option
        data-empty
        role="none"
        tabindex="-1"
        aria-disabled="false"
        aria-selected="false"
        value="Tomt                                                                                                    "
      >
        Tomt
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Sogndal                                                                                                    "
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Oslo                                                                                                    "
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Brønnøysund                                                                                                    "
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Stavanger                                                                                                    "
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Trondheim                                                                                                    "
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Bergen                                                                                                    "
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        value="Lillestrøm                                                                                                    "
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </div>
</div>
`;

exports[`Default Value 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--default-value"
    id=":label3"
  >
    Velg en destinasjon
  </label>
  <div>
    <input
      list="«r2»"
      placeholder
      id="components-suggestion--default-value"
      type="text"
      value="Sogndal"
      popovertarget="«r2»"
      aria-autocomplete="list"
      aria-controls="«r2»"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r2»"
      role="listbox"
      tabindex="-1"
      aria-labelledby=":label3"
    >
      <u-option
        data-empty
        role="none"
        tabindex="-1"
        aria-disabled="false"
        aria-selected="false"
        hidden
      >
        Tomt
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="true"
        selected
      >
        Sogndal
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        hidden
      >
        Oslo
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        hidden
      >
        Brønnøysund
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        hidden
      >
        Stavanger
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        hidden
      >
        Trondheim
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        hidden
      >
        Bergen
      </u-option>
      <u-option
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
        hidden
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </div>
</div>
`;

exports[`Fetch External 1`] = `
<div lang="en">
  <label
    data-weight="medium"
    for="components-suggestion--fetch-external"
    id=":label7"
  >
    Search for countries (in english)
  </label>
  <div>
    <input
      list="«r6»"
      placeholder
      id="components-suggestion--fetch-external"
      type="text"
      value
      popovertarget="«r6»"
      aria-autocomplete="list"
      aria-controls="«r6»"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d country"
      data-sr-plural="%d countries"
      id="«r6»"
      role="listbox"
      tabindex="-1"
      aria-labelledby=":label7"
    >
    </u-datalist>
  </div>
</div>
`;

exports[`Preview 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-suggestion--preview"
    id=":label1"
  >
    Velg en destinasjon
  </label>
  <div>
    <input
      list="«r0»"
      placeholder
      id="components-suggestion--preview"
      type="text"
      popovertarget="«r0»"
      aria-autocomplete="list"
      aria-controls="«r0»"
      aria-expanded="true"
      autocomplete="off"
      role="combobox"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <u-datalist
      data-sr-singular="%d forslag"
      data-sr-plural="%d forslag"
      id="«r0»"
      role="listbox"
      tabindex="-1"
      aria-labelledby=":label1"
    >
      <u-option
        data-empty
        role="none"
        tabindex="-1"
        aria-disabled="false"
        aria-selected="false"
      >
        Tomt
      </u-option>
      <u-option
        value="Sogndal"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Oslo"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Brønnøysund"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Stavanger"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Trondheim"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Bergen"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        value="Lillestrøm"
        tabindex="-1"
        role="option"
        aria-disabled="false"
        aria-selected="false"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </div>
</div>
`;
